--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
 <html lang="en">
     <head>
         <!-- PAGE TITLE -->
-        <title> TEST | Thronefall wiki</title>
+        <title> The official Thronefall wiki</title>
         <!-- PAGE INFORMATION -->
 		<meta name="description" content="An official wiki for Thronefall">
 		<meta name="keywords"    content="Thronefall, leaderBoard, grizzly games, speedrun, wiki, fandom">
