--- a/blank.html
+++ b/blank.html
@@ -21,7 +21,7 @@
         <!-- PAGE TITLE -->
         <title> TITLE | Thronefall wiki</title>
         <!-- PAGE INFORMATION -->
-		<meta name="description" content="An official wiki for Thronefall">
+		<meta name="description" content="DESCRIPTION">
 		<meta name="keywords"    content="Thronefall, leaderBoard, grizzly games, speedrun, wiki, fandom">
 		<meta name='author'      content="GhostMiner, ItsMeRaven"> 
 		<meta name='robots'      content="index,follow">
