--- a/game content/maps/uferwind.html
+++ b/game content/maps/uferwind.html
@@ -115,10 +115,10 @@
                                                         <td>B.</td>
                                                         <td>Achieve a victory with &nbsp;
                                                             <a href="../mutators/no_walls_pact.html">
-                                                                <img src="/assets/images/icons/mutators/No_Walls_Pact.png" alt="No walls pact" class="tableImage30px">
+                                                                <img src="/assets/images/icons/mutators/no_walls_pact.png alt="No walls pact" class="tableImage30px">
                                                             </a>&nbsp;
                                                             <a href="../mutators/falcon_god.html">
-                                                                <img src="/assets/images/icons/mutators/Falcon_God.png" alt="Falcon god" class="tableImage30px">
+                                                                <img src="/assets/images/icons/mutators/falcon_god.png" alt="Falcon god" class="tableImage30px">
                                                             </a>
                                                         </td>
                                                     </tr>
@@ -126,7 +126,7 @@
                                                         <td>C.</td>
                                                         <td>Achieve a victory with &nbsp;
                                                             <a href="../mutators/no_towers_pact.html">
-                                                                <img src="/assets/images/icons/mutators/No_Towers_Pact.png" alt="No towers pact" class="tableImage30px">
+                                                                <img src="/assets/images/icons/mutators/no_towers_pact.png" alt="No towers pact" class="tableImage30px">
                                                             </a>&nbsp;
                                                             <a href="../weapons/Sword.html">
                                                                 <img src="/assets/images/icons/weapons/heavy_sword.png" alt="Sword" class="tableImage30px">
@@ -137,10 +137,10 @@
                                                         <td>D.</td>
                                                         <td>Achieve a victory with &nbsp;
                                                             <a href="../mutators/no_units_pact.html">
-                                                                <img src="/assets/images/icons/mutators/No_Units_Pact.png" alt="No units pact" class="tableImage30px">
+                                                                <img src="/assets/images/icons/mutators/no_units_pact.png" alt="No units pact" class="tableImage30px">
                                                             </a>&nbsp;
                                                             <a href="../weapons/Lightning_Staff.html">
-                                                                <img src="/assets/images/icons/weapons/Lightning_Staff.png" alt="Lightning staff" class="tableImage30px">
+                                                                <img src="/assets/images/icons/weapons/light_spear.png" alt="Lightning staff" class="tableImage30px">
                                                             </a>
                                                         </td>
                                                     </tr>
@@ -148,10 +148,10 @@
                                                         <td>E.</td>
                                                         <td>Achieve a victory with &nbsp;
                                                             <a href="../mutators/phoenix_god.html">
-                                                                <img src="/assets/images/icons/mutators/Phoenix_God.png" alt="Phoenix god" class="tableImage30px">
+                                                                <img src="/assets/images/icons/mutators/phoenix_god.png" alt="Phoenix god" class="tableImage30px">
                                                             </a>&nbsp;
                                                             <a href="../mutators/wasp_god.html">
-                                                                <img src="/assets/images/icons/mutators/Wasp_God.png" alt="Wasp god" class="tableImage30px">
+                                                                <img src="/assets/images/icons/mutators/wasp_god.png" alt="Wasp god" class="tableImage30px">
                                                             </a>
                                                         </td>
                                                     </tr>
@@ -159,16 +159,16 @@
                                                         <td>F.</td>
                                                         <td>Achieve a victory with &nbsp;
                                                             <a href="../mutators/turtle_god.html">
-                                                                <img src="/assets/images/icons/mutators/Turtle_God.png" alt="Turtle god" class="tableImage30px">
+                                                                <img src="/assets/images/icons/mutators/turtle_god.png" alt="Turtle god" class="tableImage30px">
                                                             </a>&nbsp;
                                                             <a href="../mutators/tiger_god.html">
-                                                                <img src="/assets/images/icons/mutators/Tiger_God.png" alt="Tiger god" class="tableImage30px">
+                                                                <img src="/assets/images/icons/mutators/tiger_god.png" alt="Tiger god" class="tableImage30px">
                                                             </a>&nbsp;
                                                             <a href="../perks/power tower.html">
                                                                 <img src="/assets/images/icons/perks/power_tower.png" alt="Power tower" class="tableImage30px">
                                                             </a>
                                                         </td>
-                                                    </tr>                                                
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
@@ -189,51 +189,51 @@
                                                 <tbody class="tableBody">
                                                     <tr>
                                                         <td>1</td>
-                                                        <td>47 <a title="Peasant" href="../enemies/Peasant.html">Peasants</a></td>
+                                                        <td>47 <a title="Peasant" href="../enemies/peasant.html">Peasants</a></td>
                                                     </tr>
                                                     <tr>
                                                         <td>2</td>
-                                                        <td>10 <a title="Archer" href="../enemies/Archer.html">Archers</a>, 8 <a href="../enemies/Pikes.hmtl">Pikes</a></td>
+                                                        <td>10 <a title="Archer" href="../enemies/archer.html">Archers</a>, 8 <a href="../enemies/pikes.hmtl">Pikes</a></td>
                                                     </tr>
                                                     <tr>
                                                         <td>3</td>
-                                                        <td>7 <a href="../enemies/Fury.html">Furies</a></td>
+                                                        <td>7 <a href="../enemies/fury.html">Furies</a></td>
                                                     </tr>
                                                     <tr>
                                                         <td>4</td>
-                                                        <td>25<a title="Archer" href="../enemies/Archer.html">Archers</a>, 16 <a href="../enemies/Pikes.html">Pikes</a></td>
+                                                        <td>25<a title="Archer" href="../enemies/archer.html">Archers</a>, 16 <a href="../enemies/pikes.html">Pikes</a></td>
                                                     </tr>
                                                     <tr>
                                                         <td>5</td>
-                                                        <td>12 <a title="Monster Rider" href="../enemies/Monster%20Rider.html">Monster Riders</a>, 12 <a title="Wasp" href="../enemies/Wasp.html">Wasps</a>, 8 <a href="../enemies/Fury.html">Furies</a></td>
+                                                        <td>12 <a title="Monster Rider" href="../enemies/monster_rider.html">Monster Riders</a>, 12 <a title="Wasp" href="../enemies/wasp.html">Wasps</a>, 8 <a href="../enemies/fury.html">Furies</a></td>
                                                     </tr>
                                                     <tr>
                                                         <td>6</td>
-                                                        <td>38 <a href="../enemies/Barrel_Knight.html">Barrel Knights</a></td>
+                                                        <td>38 <a href="../enemies/barrel_Knight.html">Barrel Knights</a></td>
                                                     </tr>
                                                     <tr>
                                                         <td>7</td>
-                                                        <td>25 <a href="../enemies/Flying_Mage.html">Flying Mages</a></td>
+                                                        <td>25 <a href="../enemies/flying_Mage.html">Flying Mages</a></td>
                                                     </tr>
                                                     <tr>
                                                         <td>8</td>
-                                                        <td>25 <a title="Archer" href="../enemies/Archer.html">Archers</a>, 25 <a href="../enemies/Pikes.hmtl">Pikes</a>, 16 <a title="Wasp" href="../enemies/Wasp.html">Wasps</a>, 12 <a href="../enemies/Fury.html">Furies</a></td>
+                                                        <td>25 <a title="Archer" href="../enemies/archer.html">Archers</a>, 25 <a href="../enemies/pikes.hmtl">Pikes</a>, 16 <a title="Wasp" href="../enemies/wasp.html">Wasps</a>, 12 <a href="../enemies/fury.html">Furies</a></td>
                                                     </tr>
                                                     <tr>
                                                         <td>9</td>
-                                                        <td>45 <a href="../enemies/Barrel_Knight.html">Barrel Knights</a>, 35 <a href="../enemies/Flying_Mage.html">Flying Mages</a></td>
+                                                        <td>45 <a href="../enemies/barrel_Knight.html">Barrel Knights</a>, 35 <a href="../enemies/flying_mage.html">Flying Mages</a></td>
                                                     </tr>
                                                     <tr>
                                                         <td>10</td>
-                                                        <td>30 <a href="../enemies/Fury.html">Furies</a>, 25 <a title="Racer" href="../enemies/Racer.html">Racers</a>, 20 <a title="Wasp" href="../enemies/Wasp.html">Wasps</a></td>
+                                                        <td>30 <a href="../enemies/fury.html">Furies</a>, 25 <a title="Racer" href="../enemies/racer.html">Racers</a>, 20 <a title="Wasp" href="../enemies/wasp.html">Wasps</a></td>
                                                     </tr>
                                                     <tr>
                                                         <td>11</td>
-                                                        <td>40 <a href="../enemies/Flying_Mage.html">Flying Mages</a>, 40 <a href="../enemies/Pikes.hmtl">Pikes</a>, 12 <a title="Ogre" href="../enemies/Ogre.html">Ogres</a>, 4 <a href="../enemies/Ram.hmtl">Rams</a></td>
+                                                        <td>40 <a href="../enemies/flying_mage.html">Flying Mages</a>, 40 <a href="../enemies/pikes.hmtl">Pikes</a>, 12 <a title="Ogre" href="../enemies/ogre.html">Ogres</a>, 4 <a href="../enemies/ram.hmtl">Rams</a></td>
                                                     </tr>
                                                     <tr>
                                                         <td>12</td>
-                                                        <td>46 <a href="../enemies/Flying_Mage.html">Flying Mages</a>, 42 <a href="../enemies/Barrel_Knight.html">Barrel Knights</a>, 30 <a href="../enemies/Fury.html">Furies</a>, 7 <a href="../enemies/Ram.hmtl">Rams</a></td>
+                                                        <td>46 <a href="../enemies/flying_mage.html">Flying Mages</a>, 42 <a href="../enemies/barrel_knight.html">Barrel Knights</a>, 30 <a href="../enemies/fury.html">Furies</a>, 7 <a href="../enemies/ram.hmtl">Rams</a></td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -315,7 +315,7 @@
                             <!-- 
                                 RIGHT COLUMN
                             -->
-                            <!-- <div class="articleSidebar">
+                            <div class="articleSidebar">
                                 <section id="contentsBox" hx-get="/assets/parts/contents/maps.html" hx-swap="outerHTML" hx-trigger="load"></section>
                             
                                 <div class="articleImageBackgroundDiv boxShadow04">
@@ -336,7 +336,7 @@
                                         Uferwind in the level selection.
                                     </span>
                                 </div>
-                            </div>  -->
+                            </div> 
                             <!-- articleSidebar -->
                         </div> <!-- articleColumnsContainer -->
 
