--- a/-test/articleLayout.html
+++ b/-test/articleLayout.html
@@ -11,7 +11,7 @@
         RIGHT COLUMN
     -->
     <div class="articleSidebar">
-        <!-- <section id="contentsBox" hx-get="/assets/parts/contents/maps.html" hx-swap="outerHTML" hx-trigger="load"></section> -->
+        <section id="contentsBox" hx-get="/assets/parts/contents/maps.html" hx-swap="outerHTML" hx-trigger="load"></section>
 
     </div>
     <!--  END OF RIGHT COLUMN -->
