--- a/game content/maps/uferwind.html
+++ b/game content/maps/uferwind.html
@@ -67,7 +67,7 @@
                 </div> <!-- sidebarContainer -->
                 <div id="contentContainer" class="roundCorners5px boxShadow032"> 
                     <main>
-                        <span class="pageTitle"> Uferwind </span>
+                        <h1 class="pageTitle"> Uferwind </h1>
                         <hr class="pageTitleUnderline">
                         
                         <div class="articleColumnsContainer">
@@ -76,7 +76,7 @@
                             -->
                             <div class="articleContent">
                                 <article id="Overview">
-                                    <span class="pageSubtitle">Overview</span>
+                                    <h2 class="pageSubtitle">Overview</h2>
                                     <hr>
                                     <p> <strong> Uferwind <em> <!--(German for"North rock")--> </em> is the fifth map of Thronefall. </strong></p>
                                     <p>With its rugged shoreline to one side and vast open grasslands to the other it offers a challenge unlike any of the maps before. 
@@ -86,17 +86,17 @@
 
                                 <br>
                                 <article id="MapComposition">
-                                    <span class="pageSubtitle"> Map composition </span>
+                                    <h2 class="pageSubtitle"> Map composition </h2>
                                     <hr>
                                     description
                                 </article> <!-- mapComposition -->
 
                                 <br>
                                 <article id="MapDetails">
-                                    <span class="pageSubtitle"> Map details </span>
+                                    <h2 class="pageSubtitle"> Map details </h2>
                                     <hr>
                                     <article id="Quests">
-                                        <span class="pageSubtitleSmall"> Quests </span>
+                                        <h3 class="pageSubtitleSmall"> Quests </h3>
                                         <br>
                                         <div class="table-responsive">
                                             <table class="table  table-striped mapDetailsTable">
@@ -176,7 +176,7 @@
 
                                     <br>
                                     <article id="SpawnedEnemies">
-                                        <span class="pageSubtitleSmall"> Spawned enemies </span>
+                                        <h3 class="pageSubtitleSmall"> Spawned enemies </h3>
                                         <br>
                                         <div class="table-responsive">
                                             <table class="table  table-striped mapDetailsTable">
@@ -242,7 +242,7 @@
                                     
                                     <br>
                                     <article id="AvailableBuildings">
-                                        <span class="pageSubtitleSmall"> Available buildings </span>
+                                        <h3 class="pageSubtitleSmall"> Available buildings </h3>
                                         <br>
                                         <div class="table-responsive">
                                             <table class="table  table-striped mapDetailsTable" style="max-width: 100%;">
@@ -277,7 +277,7 @@
 
                                 <br>
                                 <article id="Gallery">
-                                    <span class="pageSubtitle"> Gallery </span>
+                                    <h2 class="pageSubtitle"> Gallery </h2>
                                     <hr>
 
                                     <div class="articleGalleryContainer">
