--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <div class="homeContainer" id="updatedContainer">
                                 <!-- Steam page -->
                                 <section id="steamGameWidgetSection">
-                                    <div id="steamPageMain">
+                                    <div id="steamdocMain">
                                         <div id="steamGameTitle">
                                             <strong>Get Thronefall</strong> on Steam
                                         </div>
@@ -123,7 +123,7 @@
                                             Saddle the horses! See your kingdom come to life, fight gripping battles to defend it and still be done in time for lunch. 
                                         </div>
                                     </div>
-                                    <!-- steamPageMain -->
+                                    <!-- steamdocMain -->
                                     <div id="steamBuyGameDiv">
                                         <a href="https://store.steampowered.com/app/2239150/Thronefall/" id="steamBuyGameButtonLink" target="_blank">
                                         <button id="steamBuyGameButton" class="btn"> Buy on Steam </button>
