--- a/game content/enemies/archer.html
+++ b/game content/enemies/archer.html
@@ -248,7 +248,7 @@
 								RIGHT COLUMN
 						    -->
 						    <div class="articleSidebar">
-								<section id="contentsBox" hx-get="/assets/parts/contents/enemies.html" hx-swap="outerHTML" hx-trigger="load"></section>
+								<!-- <section id="contentsBox" hx-get="/assets/parts/contents/enemies.html" hx-swap="outerHTML" hx-trigger="load"></section> -->
 						    
 								<div class="articleImageBackgroundDiv boxShadow04">
 								    <a href="/assets/images/enemies/archer.png" target="_blank" target="_blank" class="articleImageLink">
