--- a/game content/enemies/archer.html
+++ b/game content/enemies/archer.html
@@ -252,7 +252,7 @@
 						    
 								<div class="articleImageBackgroundDiv boxShadow04">
 								    <a href="/assets/images/enemies/archer.png" target="_blank" target="_blank" class="articleImageLink">
-										<img class="articleImage" src="/assets/images/enemies/archer.png">
+										<img class="articleImage" src="/assets/images/enemies/archer.png" alt="Image of the archer" >
 								    </a>
 								    <br>
 								    <span class="articleImageTitle">
