--- a/assets/parts/contents/maps.html
+++ b/assets/parts/contents/maps.html
@@ -1,4 +1,5 @@
 <div id="contentsListDiv" class="boxShadow04">
+	<strong>UNFINISHED</strong>
     <div id="contentsTitleDiv">
 		<div id="contents">
 		    Contents
