--- a/updates.html
+++ b/updates.html
@@ -6,7 +6,7 @@
 		<ul>
 		    <li>Updated articles to match V.1.42</li>
 		    <li>Updated and fixed some data in enemy articles.</li>
-		    <li>Updated <a href="./game content/eternal_trials.html">Eternal Trials</a></li>
+		    <li>Updated <a href="./game-content/eternal_trials.html">Eternal Trials</a></li>
 		</ul>
     </div>
 
@@ -28,7 +28,7 @@
 		<ul>
 		    <li>Updated articles to match V.1.34</li>
 		    <li>Updated and added a bunch of articles.</li>
-		    <li>Finally credited <a href="./home/abou-wiki.html">everyone who has contributed</a>!</li>
+		    <li>Finally credited <a href="./about/abou-wiki.html">everyone who has contributed</a>!</li>
 		</ul>
     </div>
 
@@ -38,7 +38,7 @@
 		<hr class="updateArticleTitleHr">
 		<ul>
 		    <li>Updated articles to match V.1.21</li>
-		    <li>Created new pages - <a href="/game content/buildings/heros quarters.html">Heros Quarter</a></li>
+		    <li>Created new pages - <a href="/game-content/buildings/heros quarters.html">Heros Quarter</a></li>
 		    <li>Updated and added some other articles.</li>
 		</ul>
     </div>
