--- a/assets/parts/nav.html
+++ b/assets/parts/nav.html
@@ -5,13 +5,13 @@
 				<a class="navItem" href="/"> Home </a>
 		    </span>
 		</li>
-		<li class="navItemGroup"  id="AboutItems">
+		<li class="navItemGroup" id="AboutItems">
 		    <span class="primaryMenuItemText">
-		    <a class="navItem linkHide" href="#"> About </a>
+		    <a class="navItem linkHide" href="#" onclick="OpenMenuItem('about')"> About </a>
 		    </span>
-		    <ul class="secondaryList">
+		    <ul class="secondaryList" id="aboutList">
 				<li>
-				    <a class="navItem" href="/home/overview.html"> Game overview</a>
+				    <a class="navItem" href="/about/overview.html"> Game overview</a>
 				</li>
 				<li>
 				    <a class="navItem" href="/about/leveling.html"> Leveling system </a>
@@ -29,76 +29,79 @@
 				    <a class="navItem" href="/about/languages.html"> Languages</a>
 				</li>
 				<li>
-				    <a class="navItem" href="/about/system_requirements.html"> System Requirements</a>
+				    <a class="navItem" href="/about/system-requirements.html"> System Requirements</a>
 				</li>
 		    </ul>
 		</li>
 		<li class="navItemGroup" id="gameContentItems">
-		    <span class="primaryMenuItemText">
-				<a class="navItem linkHide" href="#"> Game content </a>
+		    <span class="primaryMenuItemText" onmouseenter="">
+				<a class="navItem linkHide" href="#" onclick="OpenMenuItem('content')"> Game&nbsp;content </a>
 		    </span>
-		    <ul class="secondaryList">
+		    <ul class="secondaryList" id="gameContentList">
 				<li>
-				    <a class="navItem" href="/game content/maps/"> Maps </a>
+				    <a class="navItem" href="/game-content/maps/"> Maps </a>
 				</li>
 				<li>
-				    <a class="navItem" href="/game content/weapons/"> Weapons</a>
+				    <a class="navItem" href="/game-content/weapons/"> Weapons</a>
 				</li>
 				<li>
-				    <a class="navItem" href="/game content/perks/"> Perks</a>
+				    <a class="navItem" href="/game-content/perks/"> Perks</a>
 				</li>
 				<li>
-				    <a class="navItem" href="/game content/mutators/"> Mutators</a>
+				    <a class="navItem" href="/game-content/mutators/"> Mutators</a>
 				</li>
 				<li>
-				    <a class="navItem" href="/game content/buildings/"> Buildings</a>
+				    <a class="navItem" href="/game-content/buildings/"> Buildings</a>
 				</li>
 				<li>
-				    <a class="navItem" href="/game content/upgrades/"> Upgrades</a>
+				    <a class="navItem" href="/game-content/upgrades/"> Upgrades</a>
 				</li>
 				<li>
-				    <a class="navItem" href="/game content/units/"> Units</a>
+				    <a class="navItem" href="/game-content/units/"> Units</a>
 				</li>
 				<li>
-				    <a class="navItem" href="/game content/enemies/"> Enemies</a>
+				    <a class="navItem" href="/game-content/enemies/"> Enemies</a>
 				</li>
 				<li>
-				    <a class="navItem" href="/game content/eternal_trials.html"> Eternal Trials </a>
+				    <a class="navItem" href="/game-content/eternal-trials.html"> Eternal Trials </a>
 				</li>
 		    </ul>
 		</li>
 		<li class="navItemGroup">
 		    <span class="primaryMenuItemText">
-				<a class="navItem linkHide" href="#">Links</a>
-				<ul class="secondaryList">
-				    <li>
-						<a class="navItem" target="_blank" href="https://store.steampowered.com/app/2239150/Thronefall/">Get the game</a>
-				    </li>
-				    <li>
-						<a class="navItem" target="_blank" href="/leaderboard/"> Leaderboards </a>
-				    </li>
-				    <li>
-						<a class="navItem" target="_blank" href="https://discord.gg/gVYctptyg8">Discord server</a>
-				    </li>
-				    <li>
-						<a class="navItem" target="_blank" href="https://discord.gg/pfRJjfz6SU">Contribute</a>
-				    </li>
-				    <li>
-						<a class="navItem" target="_blank" href="https://docs.google.com/spreadsheets/d/1ARWbg3C38IYT4FXrgtE46osWOJWUZFyY4WFj49sAM2s/edit#gid=1409809708">Data-Sheet</a>
-				    </li>
-				</ul>
-		    </span>
+				<a class="navItem linkHide" href="#" onclick="OpenMenuItem('links')">Links</a>
+			</span>
+			<ul class="secondaryList" id="linksList">
+			    <li>
+					<a class="navItem" target="_blank" href="https://store.steampowered.com/app/2239150/Thronefall/">Get the game</a>
+			    </li>
+			    <li>
+					<a class="navItem" target="_blank" href="/leaderboard/"> Leaderboards </a>
+			    </li>
+			    <li>
+					<a class="navItem" target="_blank" href="https://discord.gg/gVYctptyg8">Discord server</a>
+			    </li>
+			    <li>
+					<a class="navItem" target="_blank" href="https://discord.gg/pfRJjfz6SU">Contribute</a>
+			    </li>
+			    <li>
+					<a class="navItem" target="_blank" href="https://docs.google.com/spreadsheets/d/1ARWbg3C38IYT4FXrgtE46osWOJWUZFyY4WFj49sAM2s/edit#gid=1409809708">Data-Sheet</a>
+			    </li>
+			</ul>
 		</li>
-		<li class="navItemGroup" id="homeItem">
+		<li class="navItemGroup">
 		    <span class="primaryMenuItemText">
-				<a class="navItem linkHide" href="#"> Miscellaneous </a>
+				<a class="navItem linkHide" id="miscCat" href="#" onclick="OpenMenuItem('misc')"> Miscellaneous </a>
 		    </span>
-		    <ul class="secondaryList">
+		    <ul class="secondaryList" id="miscList" >
+				<li id="miscHomeLink">
+					<a class="navItem" href="/"> Homepage </a>
+				</li>
 				<li>
 				    <a class="navItem" href="/misc/events"> Official Events </a>
 				</li>
 				<li>
-				    <a class="navItem" href="/misc/hall_of_fame.html"> Hall of Fame </a>
+				    <a class="navItem" href="/misc/hall-of-fame.html"> Hall of Fame </a>
 				</li>
 		    </ul>
 		</li>
