--- a/blank.html
+++ b/blank.html
@@ -40,7 +40,11 @@
 		<link rel="stylesheet" href="/assets/styles/global.css">
 		<link rel="stylesheet" href="/assets/styles/headfoot.css">
 		<link rel="stylesheet" href="/assets/styles/navigation.css">
-    </head>
+    	<!-- Dark mode -->
+		<script src="/assets/scripts/darkmode.js"></script>
+		<!-- Cookies -->
+		<script src="/assets/scripts/cookies.js"></script>
+	</head>
 
     <body>
 		<div id="mainContainerBackground" class="roundCorners5px boxShadow1">
@@ -54,7 +58,7 @@
 				</div> <!-- sidebarContainer -->
 				<div id="contentContainer" class="roundCorners5px boxShadow032"> 
 				    <main>
-						<span class="pageTitle"> Page_title </span>
+						<h1 class="pageTitle"> Blank_page </h1>
 						<hr class="pageTitleUnderline">
 						
 						    
