--- a/game/index.html
+++ b/game/index.html
@@ -3,23 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Reverse tower defense</title>
-  </head>
-  <body style="text-align: center">
-    <canvas id="unity-canvas" width=1137 height=640 style="width: 1137px; height: 640px; background: #231F20"></canvas>
-    <script src="Build/a1.0 web.loader.js"></script>
+    <title>Unity WebGL Player | Midnight motorist</title>
+    <script src="Build/UnityLoader.js"></script>
     <script>
-      createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/a1.0 web.data.gz",
-        frameworkUrl: "Build/a1.0 web.framework.js.gz",
-        codeUrl: "Build/a1.0 web.wasm.gz",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "GhostMiner",
-        productName: "Reverse tower defense",
-        productVersion: "Alpha 1.0",
-        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
-        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
-      });
+      UnityLoader.instantiate("unityContainer", "Build/beta 2 1 1 28 02 2022.json");
     </script>
+  </head>
+  <body>
+    <div id="unityContainer" style="width: 1137px; height: 640px; margin: auto"></div>
   </body>
 </html>
